java: utils: added functionalities and tests to WikipediaPageCache and used in translation manager